<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        app:title="@string/theme_title"
        app:summary="@string/theme_title_summer"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:key="use_md3"
            app:defaultValue="false"
            app:title="@string/use_material3"
            app:summary="@string/use_material3_summer"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/about_title"
        app:iconSpaceReserved="false">

        <Preference
            app:title="@string/author"
            app:summary="@string/author_summer"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="coolmarket://u/1930284"/>
        </Preference>

        <Preference
            app:title="@string/update_url"
            app:summary="@string/update_url_summer"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="coolmarket://apk/com.luckyzyx.colorosext"/>
        </Preference>

        <Preference app:fragment="com.luckyzyx.colorosext.ui.fragment.HomeFragment$AboutFragment"
            app:iconSpaceReserved="false"
            app:key="open_source"
            app:title="@string/open_source"
            app:summary="@string/open_source_summer"/>

    </PreferenceCategory>

</PreferenceScreen>